logs/rq-monitor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/rq'...
Listing './lib/python3.5/site-packages/rq/compat'...
Compiling './lib/python3.5/site-packages/rq/compat/dictconfig.py'...
***   File "./lib/python3.5/site-packages/rq/compat/dictconfig.py", line 299
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rq/contrib'...
Listing './lib/python3.5/site-packages/rq/scripts'...
Compiling './lib/python3.5/site-packages/rq/scripts/rqinfo.py'...
***   File "./lib/python3.5/site-packages/rq/scripts/rqinfo.py", line 102
    print '%s %s: %s' % (w.name, state_symbol(w.state), ', '.join(worker_queues))
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rq-0.0.0.egg-info'...
Listing './lib/python3.5/site-packages/rq_monitor'...
Listing './lib/python3.5/site-packages/rq_monitor/static'...
Listing './lib/python3.5/site-packages/rq_monitor/static/css'...
Listing './lib/python3.5/site-packages/rq_monitor/static/img'...
Listing './lib/python3.5/site-packages/rq_monitor/static/js'...
Listing './lib/python3.5/site-packages/rq_monitor/templates'...
Listing './lib/python3.5/site-packages/rq_monitor-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/times'...
Listing './lib/python3.5/site-packages/times-0.7.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-3.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
